fix media css not working on mobile, put media at end of code

--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -2,16 +2,14 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
   height: 100vh;
   width: 70vw;
   margin: auto;
   text-align: left;
-  background-color: lightblue;
 }
 
 @media only screen and (max-width: 500px) {
-  .about {
+  .about-name {
     
   }
 }
